[gd_scene load_steps=3 format=3 uid="uid://rwfyl5afltlg"]

[ext_resource type="Script" path="res://player_select.gd" id="1_ojlwf"]
[ext_resource type="Texture2D" uid="uid://ctsdb3jv5qql7" path="res://resources and assets/snail_sprite.png" id="2_6klfx"]

[node name="player_select" type="Node2D"]
script = ExtResource("1_ojlwf")

[node name="back_button" type="Button" parent="."]
offset_left = 624.0
offset_top = 760.0
offset_right = 788.0
offset_bottom = 843.0
text = "Select"

[node name="left_select" type="Button" parent="."]
offset_left = 192.0
offset_top = 320.0
offset_right = 256.0
offset_bottom = 448.0
text = "<
"

[node name="right_select" type="Button" parent="."]
offset_left = 1152.0
offset_top = 320.0
offset_right = 1216.0
offset_bottom = 448.0
text = ">"

[node name="player_pic" type="Sprite2D" parent="."]
position = Vector2(704.873, 353.812)
scale = Vector2(1.32306, 1.32306)
texture = ExtResource("2_6klfx")
